# DevFleetSync

./: .env  CONTRIBUTING.md  Cargo.toml  README.md  go.mod
.github/workflows/: deploy-gateway.yml
bot/: main.py  requirements.txt
bot/adapters/: __init__.py  auth_manager.py  credential_mint.py  discord_bot.py  mobility_bridge.py  slack_bot.py  telegram_bot.py  travel_bridge.py
bot/core/: engine.py
config/: gateway.yaml
db/: schema.sql
deployma/: docker-compose.yaml
go_watchdog/: go.mod  main.go  video_monitor.go
src/: db.rs  main.rs  reputation_ledger.rs
src/video-frontend/: VideoOverlay.js  WebRTCClient.js
src/video-gateway/: Dockerfile  signaling.go
​.github/workflows/: ci.yml
