[package]
name = "devfleetsync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Fast async web framework
axum = "0.7.4"
tokio = { version = "1.36", features = ["full"] }

# Database driver for PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }

# Serialization for our API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] } # For validating external transactions
